Added LASH support.

--- a/configure.ac
+++ b/configure.ac
@@ -130,6 +130,13 @@ PKG_CHECK_MODULES(SAMPLERATE,
 )
 AC_SUBST(SAMPLERATE_CFLAGS)
 
+#lash
+PKG_CHECK_MODULES(LASH,
+  lash-1.0 >= 0.5.4,
+  true,
+  AC_MSG_ERROR([need lash >= 0.5.4])
+)
+AC_SUBST(LASH_CFLAGS)
 
 # restore original vars
 CFLAGS="$ORIG_CFLAGS"
@@ -434,10 +441,10 @@ esac
 PHASEX_CFLAGS="$OPT_CFLAGS $DEBUG_CFLAGS"
 AC_SUBST(PHASEX_CFLAGS)
 
-PHASEX_CPPFLAGS="$ALSA_CFLAGS $JACK_CFLAGS $GTK_CFLAGS $SAMPLERATE_CFLAGS -D_GNU_SOURCE -D_REENTRANT -DPHASEX_CPU_POWER=$CPU_POWER_LEVEL"
+PHASEX_CPPFLAGS="$ALSA_CFLAGS $JACK_CFLAGS $GTK_CFLAGS $SAMPLERATE_CFLAGS -D_GNU_SOURCE -D_REENTRANT -DPHASEX_CPU_POWER=$CPU_POWER_LEVEL $LASH_CFLAGS"
 AC_SUBST(PHASEX_CPPFLAGS)
 
-PHASEX_LIBS="$ALSA_LIBS $JACK_LIBS $GTK_LIBS $SAMPLERATE_LIBS $CONF_LIBS -lpthread"
+PHASEX_LIBS="$ALSA_LIBS $JACK_LIBS $GTK_LIBS $SAMPLERATE_LIBS $CONF_LIBS $LASH_LIBS -lpthread"
 AC_SUBST(PHASEX_LIBS)
 
 
