--- a/phasex.spec.in
+++ b/phasex.spec.in
@@ -1,6 +1,5 @@
 %define		desktop_vendor	sysex
 %define		phasex_version	@PACKAGE_VERSION@
-%define		beta_version	pre1
 
 %ifarch ix86 i386 i486 i586 i686 athlon geode ia32e
 %define		build_32bit	1
@@ -12,13 +11,13 @@
 
 Name:		phasex
 Version:	%{phasex_version}
-Release:	0%{?beta_version:.%{beta_version}}%{?dist}
+Release:	1
 Summary:	PHASEX -- Phase Harmonic Advanced Synthesis EXperiment
 Group:		Applications/Multimedia
 License:	GPL
-URL:		http://sysex.net/phasex/
+URL:		http://disabled.github.com/phasex-dev/
 
-Source0:	%{name}-%{version}%{?beta_version:-%{beta_version}}.tar.gz
+Source0:	%{name}-%{version}.tar.gz
 BuildRoot:	%{_tmppath}/%{name}-%{version}-%{release}-root
 
 BuildRequires:	glibc-devel >= 2.3.0
@@ -26,6 +25,7 @@ BuildRequires:	alsa-lib-devel >= 0.9.0
 BuildRequires:	jack-audio-connection-kit-devel >= 0.99.0
 BuildRequires:	libsamplerate-devel >= 0.1.0
 BuildRequires:	gtk2-devel >= 2.4.0
+BuildRequires:  lash-devel >= 0.5.4
 BuildRequires:	perl
 BuildRequires:	desktop-file-utils
 Requires:	glibc >= 2.3.0
@@ -33,6 +33,7 @@ Requires:	alsa-lib >= 0.9.0
 Requires:	jack-audio-connection-kit >= 0.99.0
 Requires:	libsamplerate >= 0.1.0
 Requires:	gtk2 >= 2.4.0
+Requires:	lash >= 0.5.4
 
 
 %description
@@ -122,6 +123,11 @@ rm -rf $RPM_BUILD_ROOT
 
 
 %changelog
+* Fri Aug 27 2010 Anton Kormakov <assault64@gmail.com> - Milestone 1
+- Bugfixes
+- LASH support
+- Panic button
+
 * Mon Sep 21 2009 William Weston <weston@sysex.net> - 0.12.0-0pre1
 - Added 32-bit detection for cross-arch builds.
 - Fixed beta versioning handling.
