--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,12 +18,15 @@ phasex_SOURCES = \
 	bank.c bank.h \
 	settings.c settings.h \
 	help.c help.h \
-	gtkknob.c gtkknob.h \
-	lash.c lash.h
+	gtkknob.c gtkknob.h
+	
+if WITH_LASH
+    phasex_SOURCES += lash.c lash.h
+endif
 
 AM_CFLAGS   = @PHASEX_CFLAGS@
 AM_CPPFLAGS = $(EXTRA_CPPFLAGS) @PHASEX_CPPFLAGS@
-AM_LDFLAGS  = $(INTLLIBS) @PHASEX_LIBS@
+LIBS  = $(INTLLIBS) @PHASEX_LIBS@
 
 distclean-local:
 	rm -f *~
